--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,6 +69,7 @@ workflows:
             branches:
               ignore: /.*/
             tags:
+              only:
                 - /^\d+\.\d+\.\d+$/
       - publish-github-release:
           requires:
