--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
 		"build:renderer": "vite build",
 		"build:main": "tsc --build electron/tsconfig.json",
 		"build": "rimraf build && npm run build:renderer && npm run build:main",
-		"pack": "electron-builder --dir",
-		"dist:app_image": "electron-builder --linux",
-		"dist:deb": "electron-builder --linux deb",
-		"dist:macos_dmg": "electron-builder --macos",
+		"dist:app_image": "electron-builder --publish never --linux",
+		"dist:deb": "electron-builder --publish never --linux deb",
+		"dist:macos_dmg": "electron-builder --publish never --macos",
 		"dist:macos_deb": "echo 'Not supported for now'",
-		"dist:windows": "electron-builder --windows",
+		"dist:windows": "electron-builder --publish never --windows",
 		"storybook": "start-storybook -p 6006",
 		"build-storybook": "build-storybook",
 		"prepare": "husky install"
