--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
 		"start": "BROWSER=none ARK_ENTRY_URL=http://localhost:5173 concurrently \"vite\" \"sleep 2 && electron .\"",
 		"dev:electron": "tsc --build electron/tsconfig.json -w",
 		"dev:react": "vite dev",
-		"format:prettier": "prettier -w .",
-		"format:prettier:diff": "prettier --check --ignore-unknown $(git diff --staged --name-only --diff-filter=d origin/master) package.json",
+		"format": "prettier -w .",
+		"format:diff": "prettier --check --ignore-unknown $(git diff --staged --name-only --diff-filter=d origin/master) package.json",
 		"build:renderer": "vite build",
 		"build:main": "tsc --build electron/tsconfig.json",
 		"build": "rimraf build && npm run build:renderer && npm run build:main",
@@ -56,7 +56,8 @@
 			"--ignore-scripts"
 		],
 		"directories": {
-			"output": "release/",
+			"output": "release",
+			"buildResources": "resources",
 			"app": "./"
 		},
 		"mac": {
@@ -65,20 +66,6 @@
 			"type": "distribution",
 			"hardenedRuntime": true,
 			"gatekeeperAssess": false
-		},
-		"dmg": {
-			"contents": [
-				{
-					"x": 130,
-					"y": 220
-				},
-				{
-					"x": 410,
-					"y": 220,
-					"type": "link",
-					"path": "/Applications"
-				}
-			]
 		},
 		"win": {
 			"target": [
